add simple release
